# Mission-Control-Pipeline

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/: dockerfile.producer.1  dockerfile.producer.2
producers/tests/: test_prod_one.py  test_prod_two.py
