[tool.poetry]
name = "mission-control-pipeline"
version = "0.1.0"
description = "Dashboard for spaceship management!"
authors = ["Fearless-Badger <micah.najacht@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.115.14"
uvicorn = "^0.34.3"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.1"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

